--- a/www/styler.css
+++ b/www/styler.css
@@ -14,6 +14,11 @@ h1 {
 	color: #ad1d28;
 }
 
+img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 /* ===== GLOBAL PROPERTIES ===== */
 
 #GlobalNavTab {
